--- a/docs.html
+++ b/docs.html
@@ -16,8 +16,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Original+Surfer&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://betabotz-api.herokuapp.com/vendors/owl-carousel-2/owl.theme.default.min.css">
     <link rel="stylesheet" href="https://betabotz-api.herokuapp.com/css/style.css">
-    <link rel="shortcut icon" href="https://telegra.ph/file/f17f2a1ef76c43abd26f7.png"><link rel="stylesheet" href="https://betabotz-api.herokuapp.com/ajax/libs/limonte-sweetalert2/7.33.1/sweetalert2.min.css">
-    <link rel="shortcut icon" href="https://telegra.ph/file/f17f2a1ef76c43abd26f7.png"><link rel="stylesheet" href="https://betabotz-api.herokuapp.com/ajax/libs/limonte-sweetalert2/7.33.1/sweetalert2.min.css">
+    <link rel="shortcut icon" href="https://telegra.ph/file/be0e54bcf0a37386687c3.jpg"><link rel="stylesheet" href="https://betabotz-api.herokuapp.com/ajax/libs/limonte-sweetalert2/7.33.1/sweetalert2.min.css">
+    <link rel="shortcut icon" href="https://telegra.ph/file/be0e54bcf0a37386687c3.jpg"><link rel="stylesheet" href="https://betabotz-api.herokuapp.com/ajax/libs/limonte-sweetalert2/7.33.1/sweetalert2.min.css">
     <script src="https://betabotz-api.herokuapp.com/ajax/libs/limonte-sweetalert2/7.33.1/sweetalert2.min.js"></script>
    <meta name="description" content="UlhaqMz - API">
    <meta property="og:image" content="https://telegra.ph/file/3bf07f7ca029cf3cb0c6f.jpg">
@@ -39,7 +39,7 @@
             <div class="profile-desc">
               <div class="profile-pic">
                 <div class="count-indicator">
-                  <img class="img-xs rounded-circle " src="https://telegra.ph/file/f17f2a1ef76c43abd26f7.png" alt="">
+                  <img class="img-xs rounded-circle " src="https://telegra.ph/file/be0e54bcf0a37386687c3.jpg" alt="">
                   <span class="count bg-success"></span>
                 </div>
                 <div class="profile-name">
