--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="css/ruang-admin.min.css" rel="stylesheet">
-<audio autoplay="autoplay" hidden="hidden" src="https://h.top4top.io/m_2264xqrl30.mp3"></audio>
+<audio autoplay="autoplay" hidden="hidden" src="https://k.top4top.io/m_2407wudn30.mp3"></audio>
 </head>
 <style>
   .bg-orange {
