--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <link rel="shortcut icon" href="https://telegra.ph/file/6aa1783cb58fe881935ae.jpg" type="image/x-icon" />
 
-  <title>Ulhaq Mz - Rest Api's</title>
+  <title>Ulhaq Mz │ Rest Api's</title>
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="css/ruang-admin.min.css" rel="stylesheet">
