--- a/docs.html
+++ b/docs.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.0.8/font-awesome-animation.min.css"/>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Rest Api - Ulhaq Mz</title>
+    <title>Ulhaq Mz │ Docs</title>
     <link rel="stylesheet" href="https://betabotz-api.herokuapp.com/vendors/mdi/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="https://betabotz-api.herokuapp.com/vendors/css/vendor.bundle.base.css">
     <link rel="stylesheet" href="https://betabotz-api.herokuapp.com/vendors/flag-icon-css/css/flag-icon.min.css">
